--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ parts/
 sdist/
 var/
 wheels/
+media/
 pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
@@ -130,3 +131,4 @@ dmypy.json
 
 # .idea
 .idea
+/backend/media/
