--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,6 +4,20 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+    location /api/ {
+        proxy_pass http://127.0.0.1:8000/api/;
+        proxy_set_header Host $host;
+    }
+    location /admin/ {
+        proxy_pass http://127.0.0.1:8000/admin/;
+        proxy_set_header Host $host;
+    }
+    location /media/ {
+    alias /media/;
+    }
+    location /static_backend/ {
+    alias /static_backend/;
+    }
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -17,5 +31,4 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-
 }
