--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     ports:
       - "80:80"
     volumes:
+      - ../backend/foodgram/media/:/media
+      - ../backend/foodgram/collected_static/:/static_backend
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
