After 5 review. Ready to deploy.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,9 @@
 FROM python:3.10
 
-WORKDIR /app
-
-COPY requirements.txt /app
-
-RUN pip install -r requirements.txt --no-cache-dir
-
 COPY ./ /app
 
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "foodgram.wsgi"]
+RUN pip3 install -r /app/requirements.txt --no-cache-dir
+
+WORKDIR /app
+
+CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000" ]
