--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,22 +1,26 @@
 server {
     listen 80;
+    server_name localhost, 127.0.0.1;
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
     location /api/ {
-        proxy_pass http://127.0.0.1:8000/api/;
+        proxy_pass http://backend:8000/api/;
         proxy_set_header Host $host;
+    }
+    location /static/admin/ {
+        root /var/html/;
     }
     location /admin/ {
-        proxy_pass http://127.0.0.1:8000/admin/;
+        proxy_pass http://backend:8000/admin/;
         proxy_set_header Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
     }
     location /media/ {
-    alias /media/;
-    }
-    location /static_backend/ {
-    alias /static_backend/;
+        root /var/html/;
     }
     location / {
         root /usr/share/nginx/html;
