--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,5 +1,28 @@
 version: '3.3'
+
+volumes:
+  pg_data:
+  static:
+  media:
+
 services:
+
+  db:
+    image: postgres:13.10
+    env_file:
+      - ../.env
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+
+  backend:
+    build: ../backend/
+    env_file:
+      - ../.env
+    volumes:
+      - ../static/:/app/static/
+      - ../media/:/app/media/
+    depends_on:
+      - db
 
   frontend:
     build:
@@ -7,13 +30,14 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+
   nginx:
     image: nginx:1.19.3
     ports:
       - "80:80"
     volumes:
-      - ../backend/foodgram/media/:/media
-      - ../backend/foodgram/collected_static/:/static_backend
+      - ../static/:/var/html/static/
+      - ../media/:/var/html/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
