--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,17 +1,22 @@
 server {
     listen 80;
-    server_name localhost, 127.0.0.1;
+    server_name localhost, 158.160.7.160;
+    server_tokens off;
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
     location /api/ {
         proxy_pass http://backend:8000/api/;
         proxy_set_header Host $host;
     }
+
     location /static/admin/ {
         root /var/html/;
     }
+
     location /admin/ {
         proxy_pass http://backend:8000/admin/;
         proxy_set_header Host $host;
@@ -19,9 +24,11 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
     }
+
     location /media/ {
         root /var/html/;
     }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
