--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost, 158.160.7.160;
+    server_name 158.160.7.160;
     server_tokens off;
 
     location /api/docs/ {
