--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - pg_data:/var/lib/postgresql/data
 
   backend:
-    build: gleb60/foodgram_backend:latest
+    image: gleb60/foodgram_backend:latest
     env_file:
       - ./.env
     volumes:
@@ -25,7 +25,7 @@ services:
       - db
 
   frontend:
-    build: gleb60/foodgram_frontend:latest
+    image: gleb60/foodgram_frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
 
