--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     env_file:
       - ./.env
     volumes:
-      - ../static/:/app/static/
-      - ../media/:/app/media/
+      - static:/app/static/
+      - media:/app/media
     depends_on:
       - db
 
@@ -32,10 +32,10 @@ services:
   nginx:
     image: nginx:1.19.3
     ports:
-      - "80:80"
+      - "8000:80"
     volumes:
-      - ../static/:/var/html/static/
-      - ../media/:/var/html/media/
+      - static:/var/html/static/
+      - media:/media
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
