--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,34 +1,36 @@
 server {
     listen 80;
-    server_name 158.160.7.160;
+    server_name 158.160.7.160 127.0.0.1 localhost;
     server_tokens off;
+    client_max_body_size 200M;
 
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
-    }
-
-    location /api/ {
-        proxy_pass http://backend:8000/api/;
-        proxy_set_header Host $host;
-    }
 
     location /static/admin/ {
-        root /var/html/;
+      root /var/html/;
     }
-
+    location /media/ {
+      proxy_set_header Host $http_host;
+      alias /media/;
+    }
     location /admin/ {
         proxy_pass http://backend:8000/admin/;
-        proxy_set_header Host $host;
+        proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
     }
 
-    location /media/ {
-        root /var/html/;
+    location /api/docs/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/redoc.html;
     }
-
+    location /api/ {
+        proxy_pass http://backend:8000/api/;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+    }
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -42,4 +44,5 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
+
 }
