--- a/.github/workflows/foodgram.yml
+++ b/.github/workflows/foodgram.yml
@@ -73,4 +73,4 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: Деплой Kittygram успешно выполнен!
+          message: Деплой Foodgram успешно выполнен!
