--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - ./.env
     volumes:
       - static:/app/static/
-      - media:/app/media
+      - media:/media
     depends_on:
       - db
 
