--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     env_file:
       - ./.env
     volumes:
-      - static:/app/static/
-      - media:/media
+      - static:/static
+      - media:/app/media/
     depends_on:
       - db
 
@@ -34,8 +34,8 @@ services:
     ports:
       - "8000:80"
     volumes:
-      - static:/var/html/static/
-      - media:/media
+      - static:/app/static
+      - media:/app/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
