--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     env_file:
       - ./.env
     volumes:
-      - static:/static
+      - static:/app/static/
       - media:/app/media/
     depends_on:
       - db
@@ -34,8 +34,10 @@ services:
     ports:
       - "8000:80"
     volumes:
-      - static:/app/static
+      - static:/var/html/static/
       - media:/app/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+    depends_on:
+      - backend
