--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - ./.env
     volumes:
       - static:/app/static/
-      - media:/app/media/
+      - media:/app/media
     depends_on:
       - db
 
@@ -35,7 +35,7 @@ services:
       - "8000:80"
     volumes:
       - static:/var/html/static/
-      - media:/app/media/
+      - media:/media
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
